--- a/template.html
+++ b/template.html
@@ -11,22 +11,32 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    {% for book in books %}
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">
-            <div class="col-md-4">
-              <img src="{{ book.img_src|urlencode }}" class="card-img" alt="{{ book.title }}">
+
+    <div class="container">
+      <div class="row">
+        {% for books in chunked_books %}
+          {% for book in books %}
+          <div class="col-6">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="{{ book.img_src|urlencode }}" class="card-img" alt="{{ book.title }}">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ book.title }}</h5>
+                    <p class="card-text">{{ book.author }}</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title">{{ book.title }}</h5>
-                <p class="card-text">{{ book.author }}</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-            </div>
-        </div>
+          </div>
+          {% endfor %}
+        {% endfor %}
       </div>
-    {% endfor %}  
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
