--- a/template.html
+++ b/template.html
@@ -11,8 +11,17 @@
     <title>Hello, world!</title>
   </head>
   <body>
-
     <div class="container">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          {% for i in range(page_num) %}
+            <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
+          {% endfor %}
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+
       <div class="row">
         {% for books in chunked_books %}
           {% for book in books %}
