--- a/template.html
+++ b/template.html
@@ -14,11 +14,37 @@
     <div class="container">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-          {% for i in range(page_num) %}
-            <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
+          {% if current_page_num == 1 %}
+            <li class="page-item disabled">
+              <a class="page-link" href="./index{{ current_page_num - 1 }}.html" tabindex="-1" aria-disabled="true">Назад</a>
+            </li>
+          {% else %}
+            <li class="page-item">
+              <a class="page-link" href="./index{{ current_page_num - 1 }}.html">Назад</a>
+            </li>
+          {% endif %}
+
+          {% for page_num in range(1, pages_total + 1 ) %}
+            {% if page_num == current_page_num %}
+              <li class="page-item active">
+                <a class="page-link" href="./index{{ page_num }}.html">{{ page_num }}</a>
+              </li>
+            {% else %}
+              <li class="page-item">
+                <a class="page-link" href="./index{{ page_num }}.html">{{ page_num }}</a>
+              </li>
+            {% endif %}
           {% endfor %}
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+
+          {% if current_page_num == pages_total %}
+            <li class="page-item disabled">
+              <a class="page-link" href="./index{{ current_page_num + 1 }}.html" tabindex="-1" aria-disabled="true">Вперед</a>
+            </li>
+          {% else %}
+            <li class="page-item">
+              <a class="page-link" href="./index{{ current_page_num + 1 }}.html">Вперед</a>
+            </li>
+          {% endif %}
         </ul>
       </nav>
 
@@ -29,13 +55,13 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="{{ book.img_src|urlencode }}" class="card-img" alt="{{ book.title }}">
+                    <img src="../{{ book.img_src|urlencode }}" class="card-img" alt="{{ book.title }}">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">{{ book.title }}</h5>
                       <p class="card-text">{{ book.author }}</p>
-                      <a href="{{ book.book_path|urlencode }}" target="_blank"> Читать </a>
+                      <a href="../{{ book.book_path|urlencode }}" target="_blank"> Читать </a>
                     </div>
                   </div>
                 </div>
