--- a/template.html
+++ b/template.html
@@ -4,14 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-5">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
           {% if current_page_num == 1 %}
@@ -61,6 +61,11 @@
                     <div class="card-body">
                       <h5 class="card-title">{{ book.title }}</h5>
                       <p class="card-text">{{ book.author }}</p>
+                        <p>
+                          {% for genre in book.genres %}
+                            <span class="badge badge-secondary">{{ genre }}</span>
+                          {% endfor %}
+                        </p>
                       <a href="../{{ book.book_path|urlencode }}" target="_blank"> Читать </a>
                     </div>
                   </div>
@@ -71,7 +76,6 @@
         {% endfor %}
       </div>
     </div>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
