--- a/template.html
+++ b/template.html
@@ -4,16 +4,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../static/bootstrap.min.css">
 
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-    
-    <title>Hello, reviewer!</title>
+    <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
+
+    <title>Online library</title>
   </head>
   <body>
-    <div class="container mt-5">
+    <div class="mx-auto mt-5" style="width: 400px;">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
           {% if current_page_num == 1 %}
@@ -49,45 +49,36 @@
           {% endif %}
         </ul>
       </nav>
+    </div>
 
+    <div class="container">
       <div class="row">
-        {% for books in chunked_books %}
-          {% for book in books %}
-            <div class="col-6">
-              <div class="card mb-3" style="max-width: 540px;">
-                <div class="row">
-                  <div class="col-md-4">
-                    <img src="../{{ book.img_src|urlencode }}" class="card-img" alt="{{ book.title }}">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">{{ book.title }}</h5>
-                      <p class="card-text">{{ book.author }}</p>
-                        <p>
-                          {% for genre in book.genres %}
-                            <span class="badge badge-secondary">{{ genre }}</span>
-                          {% endfor %}
-                        </p>
-                      <a href="../{{ book.book_path|urlencode }}" target="_blank"> Читать </a>
-                    </div>
+        {% for book_card in book_cards %}
+          <div class="col-6">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row">
+                <div class="col-md-4">
+                  <img src="{{ book_card.img_src|urlencode }}" class="card-img" alt="{{ book_card.title }}">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ book_card.title }}</h5>
+                    <p class="card-text">{{ book_card.author }}</p>
+                      <p>
+                        {% for genre in book_card.genres %}
+                          <span class="badge badge-secondary">{{ genre }}</span>
+                        {% endfor %}
+                      </p>
+                    <a href="../media/{{ book_card.book_path|urlencode }}" target="_blank"> Читать </a>
                   </div>
                 </div>
               </div>
             </div>
-          {% endfor %}
+          </div>
         {% endfor %}
       </div>
     </div>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="../static/jquery-3.5.1.slim.min.js"></script>
     <script src="../static/bootstrap.bundle.min.js"></script>
-
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
