--- a/template.html
+++ b/template.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}bootstrap.min.css">
 
-    <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ STATIC_PREFIX }}favicon.ico" type="image/x-icon">
 
     <title>Online library</title>
   </head>
@@ -16,37 +16,29 @@
     <div class="mx-auto mt-5" style="width: 500px;">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
-          {% if current_page_num == 1 %}
-            <li class="page-item disabled">
-              <a class="page-link" href="./index{{ current_page_num - 1 }}.html" tabindex="-1">Назад</a>
-            </li>
-          {% else %}
-            <li class="page-item">
-              <a class="page-link" href="./index{{ current_page_num - 1 }}.html">Назад</a>
-            </li>
-          {% endif %}
-
+          <li class="page-item
+            {% if current_page_num == 1 %}
+              disabled
+            {% endif %}"
+          >
+            <a class="page-link" href="./index{{ current_page_num - 1 }}.html" tabindex="-1">Назад</a>
+          </li>
           {% for page_num in range(1, pages_total + 1 ) %}
-            {% if page_num == current_page_num %}
-              <li class="page-item active">
-                <a class="page-link" href="./index{{ page_num }}.html">{{ page_num }}</a>
-              </li>
-            {% else %}
-              <li class="page-item">
-                <a class="page-link" href="./index{{ page_num }}.html">{{ page_num }}</a>
-              </li>
-            {% endif %}
+            <li class="page-item
+              {% if page_num == current_page_num %}
+                active
+              {% endif %}"
+            >
+              <a class="page-link" href="./index{{ page_num }}.html">{{ page_num }}</a>
+            </li>
           {% endfor %}
-
-          {% if current_page_num == pages_total %}
-            <li class="page-item disabled">
-              <a class="page-link" href="./index{{ current_page_num + 1 }}.html" tabindex="-1" aria-disabled="true">Вперед</a>
-            </li>
-          {% else %}
-            <li class="page-item">
-              <a class="page-link" href="./index{{ current_page_num + 1 }}.html">Вперед</a>
-            </li>
-          {% endif %}
+          <li class="page-item
+            {% if current_page_num == pages_total %}
+              disabled
+            {% endif %}"
+          >
+            <a class="page-link" href="./index{{ current_page_num + 1 }}.html" tabindex="-1" aria-disabled="true">Вперед</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -58,7 +50,11 @@
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row">
                 <div class="col-md-4">
-                  <img src="{{ book_card.img_src|urlencode }}" class="card-img" alt="{{ book_card.title }}">
+                  {% if book_card.img_src %}
+                    <img src="{{ MEDIA_PREFIX }}images/{{ book_card.img_src|urlencode }}" class="card-img" alt="{{ book_card.title }}">
+                  {% else %}
+                    <img src="{{ STATIC_PREFIX }}nopic.gif" class="card-img" alt="default picture">
+                  {% endif %}
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
@@ -69,7 +65,7 @@
                           <span class="badge badge-secondary">{{ genre }}</span>
                         {% endfor %}
                       </p>
-                    <a href="../media/{{ book_card.book_path|urlencode }}" target="_blank"> Читать </a>
+                    <a href="{{ MEDIA_PREFIX }}{{ book_card.book_path|urlencode }}" target="_blank"> Читать </a>
                   </div>
                 </div>
               </div>
@@ -78,7 +74,7 @@
         {% endfor %}
       </div>
     </div>
-    <script src="../static/jquery-3.5.1.slim.min.js"></script>
-    <script src="../static/bootstrap.bundle.min.js"></script>
+    <script src="{{ STATIC_PREFIX }}jquery-3.5.1.slim.min.js"></script>
+    <script src="{{ STATIC_PREFIX }}bootstrap.bundle.min.js"></script>
   </body>
 </html>
