--- a/template.html
+++ b/template.html
@@ -16,26 +16,26 @@
     <div class="mx-auto mt-5" style="width: 500px;">
       <nav aria-label="Page navigation example">
         <ul class="pagination">
-          <li class="page-item
+          <li
             {% if current_page_num == 1 %}
-              disabled
-            {% endif %}"
+              class="page-item disabled"
+            {% endif %}
           >
             <a class="page-link" href="./index{{ current_page_num - 1 }}.html" tabindex="-1">Назад</a>
           </li>
           {% for page_num in range(1, pages_total + 1 ) %}
-            <li class="page-item
+            <li
               {% if page_num == current_page_num %}
-                active
-              {% endif %}"
+                class="page-item active"
+              {% endif %}
             >
               <a class="page-link" href="./index{{ page_num }}.html">{{ page_num }}</a>
             </li>
           {% endfor %}
-          <li class="page-item
+          <li
             {% if current_page_num == pages_total %}
-              disabled
-            {% endif %}"
+              class="page-item disabled"
+            {% endif %}
           >
             <a class="page-link" href="./index{{ current_page_num + 1 }}.html" tabindex="-1" aria-disabled="true">Вперед</a>
           </li>
